# zenn-topic-summarize

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/: claude-code-config.yml
.github/workflows/: claude-code-review.yml  claude-code.yml
app/: __init__.py  config.py  crawler.py  logging_config.py  main.py  renderer.py  summarizer.py  vertex_ai_client.py
docs/: branch_rule.md  github-actions-setup.md  requirements.md  tdd_rule.md  vertex-ai-setup.md
docs/dev_log/: 01_project_foundation_completed.md  02_article_crawler_implementation.md  02_vibelogger_integration_completed.md  03_integrated_summarization_system_completed.md  04_mcp_integration_completed.md  simplified_feed_retrieval_implementation.md
docs/planning/: plan_o3.md
docs/sow/: 01_project_foundation.md  02_article_crawler.md  03_integrated_summarization_system.md  04_mcp_integration.md  05_simplified_feed_retrieval.md  06_trending_feed_feature.md
tests/: test_config.py  test_crawler.py  test_integration.py  test_logging.py  test_main.py  test_mcp_tools.py  test_renderer.py  test_summarizer.py  test_vertex_ai.py
