[project]
name = "zenn-mcp-server"
version = "0.1.0"
description = "Zenn MCP Server for article search, summarization and report generation"
authors = [
    {name = "YusukeHayashiii", email = "your-email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.5.0",
    "google-cloud-aiplatform>=1.38.0",
    "pytest>=7.4.0",
    "loguru>=0.7.0",
    "uvicorn>=0.24.0",
    "vibelogger>=0.1.0",
    "mcp[cli]>=1.11.0",
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
]
